fix positioning on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -98,7 +98,7 @@ span#top-navbar-links {
 
 @media screen and (max-width: 767px) {
   .list-controls:after {
-    margin-top: -150px;
+    margin-top: -170px;
   }
 
   #create-topic {
